--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
+    <uses-feature android:name="android.hardware.camera" android:required="true"/> 
 
     <application
         android:allowBackup="true"
@@ -23,5 +24,5 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
+
