Some files missed in last commit

--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="/home/colby/workspace/PayFace/libs/android-core-3.1.0-javadoc.jar"/>
 	<classpathentry kind="lib" path="/home/colby/workspace/PayFace/libs/json-simple-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/colby/workspace/PayFace/libs/android-async-http-1.4.5.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
