--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
     <uses-feature android:name="android.hardware.camera" android:required="true"/> 
+    <uses-permission android:name="android.permission.INTERNET" /> 
 
     <application
         android:allowBackup="true"
